0.7    
    web API: content type of gpx export is now application/gpx+xml if not explicitely specified
    use prepare.chWeightings instead of prepare.chWeighting e.g. for disabling CH use prepare.chWeightings=no
    GraphHopper class is refactored regarding RoutingAlgorithmFactory in order to fix problem when integrating flexibility routing, most of the CH related stuff is moved into CHAlgoFactoryDecorator, several methods are deprecated to use the methods of the decorator, see #631
    WeightingMap is now named HintsMap
    use the correct graphHopperFolder as no automatic fallback to 'folder-gh' is happening anymore, see #704
    refactored FlagEncoder.handleFerryWay to getFerrySpeed to make it possible to fix #665
    removed setWeightLimit as too unspecific for arbitrary weights, use setMaxVisitedNodes instead
    missing renames for Path.setEdgeEntry -> setSPTEntry and AbstractAlgorithm.createEdgeEntry -> createSPTEntry

0.6
    removed methods deprecated in 0.4 and 0.5
    renamed EdgeEntry to SPTEntry and AStar.AStarEdge to AStar.AStarEntry
    parameter force removed from AbstractFlagEncoder.applyMaxSpeed
    GHResponse now wraps multiple PathWrapper; renamed GraphHopper.getPaths to calcPaths as 'get' sounded too cheap; a new method RoutingAlgorithm.calcPaths is added; see #596
    moving lgpl licensed file into own submodule graphhopper-tools-lgpl
    renaming of Tarjans algorithm class to TarjansSCCAlgorithm
    more strict naming for Weighting enforced and more strict matching to select Weighting (equals check), #490
    specify the preferred-language for way names during graph import (ISO 639-1 or ISO 639-2)
    renaming of getCHWeighting to getCHWeightings due to supporting multiple CH weightings, #623
    deprecation of setCHWeighting, please use setCHWeightings instead, #623

0.5
    Several names have changed see #466, #467, #468
    GraphHopper.optimize removed use postProcessing instead