@@ -1,4 +1,5 @@
 0.7    
+    no more acceptedRailways set see #662 for more information
     web API: content type of gpx export is now application/gpx+xml if not explicitely specified
     use prepare.chWeightings instead of prepare.chWeighting e.g. for disabling CH use prepare.chWeightings=no
     GraphHopper class is refactored regarding RoutingAlgorithmFactory in order to fix problem when integrating flexibility routing, most of the CH related stuff is moved into CHAlgoFactoryDecorator, several methods are deprecated to use the methods of the decorator, see #631
